@startuml

class ControllerBase

class Card {
    + CardId: int
    + ScryfallId: Guid
    + Name: string
    + OracleText: string
    + ImageUri: string
}

class CardFace {
    + CardFaceId: int
    + Name: string
    + OracleText: string
    + ImageUri: string
    + CardId: int
}

class RelatedCard {
    + RelatedCardId: int
    + Name: string
    + ImageUri: string
}

class MtgController {
    + IsOwnerOrAdmin(resourceApiUserId: string) : bool
    # {static} ToCardDto(card: Card) : CardDto
}

MtgController --|> ControllerBase

class CardDto {
    + CardId: int
    + ScryfallId: Guid
    + Name: string
    + OracleText: string
    + ImageUri: string
    + AltFace: CardFaceDto?
    + RelatedCards: List<RelatedCardDto>
}

class CardFaceDto {
    + Name: string
    + OracleText: string
    + ImageUri: string
}

class RelatedCardDto {
    + RelatedCardId: int
    + Name: string
    + ImageUri: string
}

Card "1" o-- "0..1" CardFace : AltFace
Card "1" o-- "*" RelatedCard : RelatedCards

CardDto "1" o-- "0..1" CardFaceDto : AltFace
CardDto "1" o-- "*" RelatedCardDto : RelatedCards

MtgController ..> Card : maps
MtgController ..> CardDto : returns

@enduml